# async-Eel

./: README.md  pyproject.toml  requirements.txt  setup.py
async_eel/: __init__.py  browsers.py  utils.py
examples/01 - hello_world/: hello.py
examples/01 - hello_world-Edge/: hello.py
examples/02 - callbacks/: callbacks.py
examples/03 - sync_callbacks/: sync_callbacks.py
examples/04 - file_access/: file_access.py
examples/05 - input/: script.py
examples/05 - input/web/: main.html
examples/06 - jinja_templates/: hello.py
examples/07 - CreateReactApp/: eel_CRA.py
examples/08 - Eelectron-quick-start/: hello.py
examples/08 - disable_cache/: disable_cache.py
examples/08 - disable_cache/web/: disable_cache.html
