[tool.poetry]
name = "async-eel"
version = "1.0-b3"
description = "For little HTML GUI applications, with easy Python/JS interop"
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
expiringdict = "^1.2.1"
whichcraft = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
